# shared-workflow-test

./: .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python-deploy.yml  python-lint.yml  python-test-sonarqube.yml  python-tests.yml
notebooks/example_user/: Untitled.ipynb
tests/: test_add.py
